Removed obsolote TODOs